--- a/src/app/features/character/component/artifact-sub/artifact-sub.component.html
+++ b/src/app/features/character/component/artifact-sub/artifact-sub.component.html
@@ -53,6 +53,7 @@
         <app-artifact-chips
             [characterIndex]="characterIndex"
             [index]="index"
+            [isAuto]="isAuto"
             [part]="artifactType"
             [changed]="chipChanged"
         ></app-artifact-chips>
