fix the abnormal display of buff in switching artifact set

--- a/src/app/features/character/component/artifact/artifact.component.html
+++ b/src/app/features/character/component/artifact/artifact.component.html
@@ -44,6 +44,7 @@
                             [characterIndex]="data.id"
                             [skill]="name_set"
                             [skillIndex]="2"
+                            [refreshFlg]="setBuffRefreshFlg"
                             [valueIndexs]="effectValidIndexs">
                             <br>
                             <br>
@@ -51,6 +52,7 @@
                                 [characterIndex]="data.id"
                                 [skill]="name_set"
                                 [skillIndex]="1"
+                                [refreshFlg]="setBuffRefreshFlg"
                                 [valueIndexs]="effectValidIndexs">
                             </app-extra-data>
                         </app-extra-data>
