--- a/src/app/features/character/component/character/character.component.html
+++ b/src/app/features/character/component/character/character.component.html
@@ -9,7 +9,7 @@
         </mat-card-header>
         <mat-card-content class="content">
             <mat-divider></mat-divider>
-            <mat-expansion-panel class="mat-elevation-z0 expand" [expanded]="true">
+            <mat-expansion-panel class="mat-elevation-z0 expand" [expanded]="true" (afterCollapse)="onExpandStatusChanged()" (afterExpand)="onExpandStatusChanged()">
                 <mat-expansion-panel-header>
                     <mat-panel-title>
                         <span [innerText]="'CHARACTER.PROPS' | translate"></span>
@@ -54,7 +54,7 @@
                 </table>
             </mat-expansion-panel>
             <ng-container *ngIf="allData">
-                <mat-expansion-panel class="mat-elevation-z0 expand" [expanded]="false">
+                <mat-expansion-panel class="mat-elevation-z0 expand" [expanded]="true" (afterCollapse)="onExpandStatusChanged()" (afterExpand)="onExpandStatusChanged()">
                     <mat-expansion-panel-header>
                         <mat-panel-title>
                             <span [innerText]="'CHARACTER.ALLPROPS' | translate"></span>
