--- a/src/app/features/character/component/main/main.component.css
+++ b/src/app/features/character/component/main/main.component.css
@@ -5,6 +5,8 @@
     /* background-size: cover; */
     /* opacity: 0.3; */
     /* color: #fff; */
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 .content {
