--- a/src/app/features/character/component/weapon/weapon.component.html
+++ b/src/app/features/character/component/weapon/weapon.component.html
@@ -18,7 +18,7 @@
         </mat-card-header>
         <mat-card-content class="content">
             <mat-divider></mat-divider>
-            <mat-expansion-panel class="mat-elevation-z0 expand" [expanded]="true">
+            <mat-expansion-panel class="mat-elevation-z0 expand" [expanded]="true" (afterCollapse)="onExpandStatusChanged()" (afterExpand)="onExpandStatusChanged()">
                 <mat-expansion-panel-header>
                     <mat-panel-title>
                         <span [innerText]="'WEAPON.PROPS' | translate"></span>
@@ -67,7 +67,7 @@
 
             <ng-container *ngIf="this.weaponData.skillAffixMap">
                 <mat-divider></mat-divider>
-                <mat-expansion-panel class="mat-elevation-z0 expand" [expanded]="true">
+                <mat-expansion-panel class="mat-elevation-z0 expand" [expanded]="true" (afterCollapse)="onExpandStatusChanged()" (afterExpand)="onExpandStatusChanged()">
                     <mat-expansion-panel-header>
                         <mat-panel-title>
                             <span [innerText]="'WEAPON.SMELTING' | translate"></span>
