--- a/src/app/features/character/component/constellation/constellation.component.html
+++ b/src/app/features/character/component/constellation/constellation.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="data.skills.talents">
-    <mat-card class="card" [style.width.px]="cardWidth" cdkDrag [cdkDragStartDelay]="300" [style.z-index]="zIndex" (cdkDragStarted)="onDrag()">
-        <mat-card-header cdkDragHandle>
+    <mat-card class="card" [style.width.px]="cardWidth">
+        <mat-card-header>
             <mat-card-title [innerText]="'CHARACTER.CONSTELLATION' | translate"></mat-card-title>
         </mat-card-header>
         <mat-divider></mat-divider>
