update optimize: added the additional rate and base for Nahida

--- a/src/app/features/character/component/artifact-auto/artifact-auto.component.html
+++ b/src/app/features/character/component/artifact-auto/artifact-auto.component.html
@@ -32,7 +32,7 @@
                 </div>
             </td>
         </tr>
-        <ng-container *ngFor="let item of inputItems">
+        <ng-container *ngFor="let item of (isMixRate?inputItemsMix:inputItems)">
             <tr *ngIf="item.isSelect?(userInputList[item.selectListName!].length > 0):true">
                 <td class="left">
                     <span [innerText]="'AUTO.' + item.name | translate"></span>
