update: remove unused libs and components, support PWA

--- a/src/app/root/head/head.component.css
+++ b/src/app/root/head/head.component.css
@@ -41,5 +41,9 @@
 } */
 
 .github {
-  transform: scale(0.9);
+  transform: scale(0.9) translateY(-1px);
+}
+
+.download {
+  transform: scale(1.16);
 }
