--- a/src/app/features/character/component/other/other.component.html
+++ b/src/app/features/character/component/other/other.component.html
@@ -34,9 +34,9 @@
                             [title]="'OTHER.TARGET'"
                             [model]="infos[selectedIndex].name"
                             (modelChange)="onSelectProp($event, selectedIndex)"
-                            [OriginList]="propList"
-                            [OptionValueProperty]="'value'"
-                            [OptionInnerTextProperty]="'names'"
+                            [originList]="propList"
+                            [optionValueProperty]="'value'"
+                            [optionInnerTextProperty]="'names'"
                             [currentLanguage]="currentLanguage">
                         </app-mat-filtering-selector>
                         <!-- 値 -->
