--- a/src/app/features/character/component/enemy/enemy.component.html
+++ b/src/app/features/character/component/enemy/enemy.component.html
@@ -1,16 +1,18 @@
 <ng-container>
     <mat-card class="card" [style.width.px]="cardWidth">
         <mat-card-header>
-            <!-- <div mat-card-avatar class="avatar" [style.background-image]="avatarLoadFlg?'url(' + avatarURL + ')':''">
-            </div> -->
+            <div mat-card-avatar class="avatar" [style.background-image]="avatarLoadFlg?'url(' + avatarURL + ')':''">
+            </div>
             <mat-card-title class="header-text">
                 <app-mat-filtering-selector
                     [title]="'ENEMY.NAME'"
                     [model]="selectedEnemyIndex"
                     (modelChange)="onSelectEnemy($event)"
-                    [OriginList]="enemyList"
-                    [OptionValueProperty]="'index'"
-                    [OptionInnerTextProperty]="'names'"
+                    [originList]="enemyList"
+                    [optionValueProperty]="'index'"
+                    [optionInnerTextProperty]="'names'"
+                    [selectedDispalyProperty]="'name'"
+                    [service]="enemyService"
                     [currentLanguage]="currentLanguage">
                 </app-mat-filtering-selector>
                 <br>
