hidden the footer and added menu icon

--- a/src/app/root/main/main.component.html
+++ b/src/app/root/main/main.component.html
@@ -26,5 +26,5 @@
       </div>
     </mat-sidenav-content>
   </mat-sidenav-container>
-  <app-footer class="footer"></app-footer>
+  <!-- <app-footer class="footer"></app-footer> -->
 </div>
