--- a/src/app/root/menu/menu.component.css
+++ b/src/app/root/menu/menu.component.css
@@ -31,11 +31,41 @@
   font-size: 1.4em;
 }
 
-.icon {
+.icon-div {
   height: 2.7rem;
   width: 2.7rem;
+  flex: none;
+  position: relative;
+  margin-right: 0.5rem;
+}
+
+.icon-before {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  border-radius: 11% 11% 5% 11%;
+  background-color: #e7e5d8;
+}
+
+.icon {
+  height: 100%;
+  width: 100%;
+  position: absolute;
   vertical-align: middle;
   margin-right: 0.5rem;
+  border-radius: 11% 11% 30% 11%;
+}
+
+.icon-after {
+  position: absolute;
+  top: 0.05em;
+  left: 0.05em;
+  width: 0.8em;
+  height: 0.8em;
+}
+
+.name { 
+  word-break: break-word;
 }
 
 .menu-a {
