--- a/src/app/root/menu/menu.component.html
+++ b/src/app/root/menu/menu.component.html
@@ -1,13 +1,17 @@
 <mat-nav-list class="menu-list">
   <ng-container *ngFor="let menu of menuList">
     <a class="menu-a" mat-list-item (click)="onClick(menu)">
-      <img class="icon" [src]="menu.iconImg" loading="lazy" alt="X">
+      <div class="icon-div">
+        <div class="icon-before"></div>
+        <img class="icon" [style.background]="menu.bgImg" [src]="menu.iconImg" loading="lazy" alt="X">
+        <img class="icon-after" [src]="menu.elementSvg" loading="lazy" alt="X">
+      </div>
       <ng-container *ngIf="menu.sexType; then player else character"></ng-container>
       <ng-template #player>
-        <span [innerText]="('PLAYER.' + menu.sexType | translate) + ' (' + ('ELEMENT.' + menu.elementType | translate) + ')'"></span>
+        <span class="name" [innerText]="('PLAYER.' + menu.sexType | translate) + ' (' + ('ELEMENT.' + menu.elementType | translate) + ')'"></span>
       </ng-template>
       <ng-template #character>
-        <span [innerText]="menu.names[currentLanguage]"></span>
+        <span class="name" [innerText]="menu.names[currentLanguage]"></span>
       </ng-template>
       <span class="spacer"></span>
       <figure *ngIf="menu.isEnkaData" class="shinshinmoe"></figure>
