add img error handle

--- a/src/app/features/character/component/constellation/constellation.component.html
+++ b/src/app/features/character/component/constellation/constellation.component.html
@@ -10,7 +10,7 @@
                     <mat-expansion-panel class="mat-elevation-z0 expand" (afterCollapse)="onExpandStatusChanged()" (afterExpand)="onExpandStatusChanged()">
                         <mat-expansion-panel-header>
                             <mat-panel-title>
-                                <img class="skill-icon" [style.background-image]="iconBGColor" [src]="talent.images.icon" loading="lazy" alt="X">
+                                <img class="skill-icon" [style.background-image]="iconBGColor" [src]="talent.images.icon" loading="lazy" appImgErrorHandle>
                                 <span [innerText]="talent.name[currentLanguage]"></span>
                             </mat-panel-title>
                         </mat-expansion-panel-header>
